# outcomely

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  accuracy_scorer.py  config.py  database.py  main.py  market_data.py  prediction_extractor.py  pyproject.toml  railway.toml  render.yaml  requirements.txt  server.py  title_classifier.py  title_extractor.py  youtube_api.py  youtube_fetcher.py
data/: predictions.db
frontend/: 404.html  about.html  app.js  creator.html  index.html  styles.css
